<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_message">Sign Up below!</string>
    <string name="app_name">Bodify</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="User_Name">User Name</string>
    <string name="email_address">JaneDoe@gmail.com</string>
    <string name="email_address1">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="existing_account">Already have an existing Account? Log In here</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="Login_welcome_message">Log In below!</string>
    <string name="create_account">Not registered? create an Account</string>
    <string name="personal_information">Personal Information</string>
    <string name="weight">Weight in KGs: </string>
    <string name="height">Height in CMs: </string>
    <string name="gender">Gender</string>
    <string name="fitness_goal">Fitness Goal: </string>
    <string name="activity_level">Activity Level</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="very_active">3</string>
    <string name="active">2</string>
    <string name="slightly_active">1</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="submit">Submit</string>
    <string name="facebook_app_id">649335919276298</string>
    <string name="fb_login_protocol_scheme">fb649335919276298</string>
    <string name="pedometerButton">Pedometer</string>
    <string name="logOutOptionMenu">Log Out</string>
    <string name="myInformationOptionMenu">My Information</string>
    <string name="personalProfileWelcomeMessage">Personal Information</string>
    <string name="userProfilePictureDescription">User Profile Picture</string>
    <string name="profilePickButton">Profile Picture</string>
    <string name="updateProfile">Update Profile</string>
    <string name="fitnessGoalMessage">Based on your Activity Level and Fitness Goal, Bodify recommend the following lifestyle adjustments</string>
    <string name="bmi">Body Mass Indicator</string>
    <string name="fitnessLevel">Fitness Level: </string>
    <string name="calorieIntake">Suggested Calorie Intake: </string>
    <string name="bodytype">Body Composition</string>
    <string name="preferredFoods">Preferred Macro-nutrient</string>
    <string name="message">Message</string>
    <string name="scan">Scan</string>
    <!--    <string name=""></string>-->
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="title_activity_tailoring">Tailoring</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_pedometer_feature">PedometerFeature</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_activity_gyms_near_me">Map</string>
    <string name="title_activity_personal_profile">PersonalProfile</string>
    <string name="title_activity_permissions">PermissionsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_view_all_users">viewAllUsersAdapter</string>
    <string name="title_activity_chat_room">chatRoom</string>
    <string name="title_activity_pedometer">Pedometer</string>
    <string name="title_activity_a_p_is">APIs</string>
    <string name="title_activity_view_all_recipes">ViewAllRecipes</string>
    <string name="title_activity_management">Management</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_tab1">Tab1</string>
    <string name="title_activity_analysis">Analysis</string>
    <string name="title_activity_food_suggester">FoodSuggester</string>
    <string name="title_activity_milestones">Milestones</string>
    <string name="title_activity_weight_progression">WeightProgression</string>
    <string name="title_activity_deals">Deals</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_chat_room_manager">ChatRoomManager</string>
    <string name="title_activity_chat_room_splitter">ChatRoomSplitter</string>
    <string name="title_activity_chat_box">ChatBox</string>
    <string name="title_activity_grocery_suggester">GrocerySuggester</string>
    <string name="title_activity_groceries">Groceries</string>
</resources>