<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Tailoring">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/personal_information"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/personal_information" />

    <EditText
        android:id="@+id/weightTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTextField" />

    <RadioGroup
    android:layout_width="281dp"
    android:layout_height="33dp"
    android:layout_marginTop="16dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="20sp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:textSize="20sp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/female"
        android:textSize="20sp" />
</RadioGroup>

    <RadioGroup
        android:layout_width="419dp"
        android:layout_height="93dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="357dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/activity_level"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slightly_active"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/active"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/very_active"
            android:textSize="20sp" />
    </RadioGroup>

    <!--    <RadioGroup-->
<!--        android:layout_width="281dp"-->
<!--        android:layout_height="33dp"-->
<!--        android:orientation="horizontal">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/fitness_goal"-->
<!--            android:textSize="20sp" />-->

<!--        <RadioButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/lose_weight"-->
<!--            android:textSize="20sp" />-->

<!--        <RadioButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="@string/maintain_weight"-->
<!--            android:textSize="20sp" />-->

<!--        <RadioButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="@string/gain_weight"-->
<!--            android:textSize="20sp" />-->
<!--    </RadioGroup>-->



</androidx.constraintlayout.widget.ConstraintLayout>