<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".Settings">


    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="655dp" />

    <TextView
        android:id="@+id/preferredMacroNutrientTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/preferredFoods"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodyCompositionSpinner"
        tools:text="@string/preferredFoods" />

    <Spinner
        android:id="@+id/bodyCompositionSpinner"
        android:layout_width="219dp"
        android:layout_height="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodyCompositionTextField" />

    <Spinner
        android:id="@+id/preferredMacroNutrientSpinner"
        android:layout_width="300dp"
        android:layout_height="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferredMacroNutrientTextField" />

    <TextView
        android:id="@+id/bodyCompositionTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bodytype"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fitnessGoalSpinner"
        tools:text="@string/bodytype" />

    <TextView
        android:id="@+id/emailAddressTextField"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="140dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextField" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="User name: "
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="User name: " />

    <EditText
        android:id="@+id/heightTextFieldPP"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="140dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/weightTextFieldPP" />

    <EditText
        android:id="@+id/weightTextFieldPP"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="153dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/weightTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressTextField" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="Weight(KGs):"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="Weight(KGs): " />

    <Spinner
        android:id="@+id/activityLevelSpinner"
        android:layout_width="219dp"
        android:layout_height="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Spinner
        android:id="@+id/fitnessGoalSpinner"
        android:layout_width="219dp"
        android:layout_height="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/fitness_goal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityLevelSpinner"
        tools:text="@string/fitness_goal" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/activity_level"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:text="@string/activity_level" />

    <Button
        android:id="@+id/updateInformationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/updateProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferredMacroNutrientSpinner"
        tools:text="@string/updateProfile" />

    <EditText
        android:id="@+id/userNameTextField"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="83dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/userNameTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="Email: "
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
        tools:text="Email: " />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="Height(CMs): "
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTextView" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="575dp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="619dp" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="689dp" />

</androidx.constraintlayout.widget.ConstraintLayout>